# Neso

./: .gitignore  Todo.md  build_log.txt  compatibility_list.md  settings.gradle  test-build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  apu.cpp  apu.h  cpu.cpp  cpu.h  jni_bridge.cpp  mapper.cpp  mapper.h  palette.h  ppu.cpp  ppu.h  renderer.cpp  renderer.h  rom.cpp  rom.h
app/src/main/java/com/example/neso/: MainActivity.kt
app/src/main/java/com/neso/core/: MainActivity.java
app/src/main/res/values/: styles.xml
